RFC 7239 - Forwarded header initial support

--- a/doc/release-notes/release-7.sgml.in
+++ b/doc/release-notes/release-7.sgml.in
@@ -34,6 +34,7 @@ The Squid-@SQUID_RELEASE@ change history can be <url url="https://github.com/squ
 	<item>Removed purge tool
 	<item>Remove deprecated languages
 	<item>Remove Ident protocol support
+	<item>Forwarded HTTP Extension support
 </itemize>
 
 <p>Most user-facing changes are reflected in squid.conf (see further below).
@@ -127,6 +128,37 @@ in the position of what used to be a %ui record field.
 <p>If necessary, an external ACL helper can be written to perform Ident transactions
 and deliver the user identity to Squid through the **user=** annotation.
 
+<sect1>Forwarded HTTP Extension support
+<p>Details in <url url="https://tools.ietf.org/html/rfc7239" name="RFC 7239: Forwarded HTTP Extension">
+
+<p>The <em>Forwarded</em> extension has been standardized to replace
+   <em>X-Forwarded-For</em> and similar custom headers. This release contains
+   initial support for managing this HTTP extension in Squid with the
+   <em>http_header_forwarded</em> directive.
+
+<p>The default behaviour is <em>transparent</em> - to relay any <em>Forwarded</em>
+   or <em>X-Forwarded-For</em> headers from the client unchanged to the server.
+   Unlike <em>X-Forwarded-For</em> the default is not to expose client IP in the
+   <em>Forwarded</em>.
+
+<p>To send client IP and other details in the <em>Forwarded</em> header, the
+   <em>header_add</em> directive and ACLs can be used to control what gets
+   sent and on which traffic:
+<verb>
+   acl internal dstdomain .example.com
+   acl ipv6 src ipv6
+
+   request_header_add Forwarded "for=%>a;by=%>la:%>lp" !ipv6 internal
+   request_header_add Forwarded "for=[%>a];by=[%>la]:%>lp" ipv6 internal
+
+   request_header_add Forwarded "for=%>a" !ipv6 !internal
+   request_header_add Forwarded "for=[%>a]" ipv6 !internal
+</verb>
+
+<p>The <em>delete</em> option can be selected to remove all <em>X-Forwarded-For</em>
+   and <em>Forwarded</em> headers from sent requests.
+
+
 <sect>Changes to squid.conf since Squid-@SQUID_RELEASE_OLD@
 <p>
 This section gives an account of those changes in three categories:
@@ -141,7 +173,21 @@ This section gives an account of those changes in three categories:
 <sect1>New directives<label id="newdirectives">
 <p>
 <descrip>
-	<p>No new directives in this version.
+	<tag>http_header_forwarded</tag>
+	<p>New directive to customize handling of Forwarded headers.
+	   See <url url="https://tools.ietf.org/html/rfc7239" name="RFC 7239">
+           for details of this HTTP extension.
+	<p>Option <em>delete</em> removes both Forwarded and
+	   X-Forwarded-For headers from traffic.
+	<p>Option <em>transparent</em> relays any Forwarded and
+	   X-Forwarded-For headers without changes.
+	<p>Option <em>truncate</em> removes any existing
+	   Forwarded and X-Forwarded-For headers, then adds
+	   a new X-Forwarded-For header with Client IP.
+	<p>Deprecated Option <em>off</em> removes Forwarded headers and
+	   appends 'unknown' to X-Forwarded-For.
+	<p>Deprecated Option <em>on</em> (the default) removes Forwarded
+	   headers and appends Client IP to X-Forwarded-For.
 
 </descrip>
 
@@ -227,6 +273,9 @@ This section gives an account of those changes in three categories:
 <descrip>
 	<tag>esi_parser</tag>
 	<p>Edge Side Includes (ESI) protocol is no longer supported natively.
+
+	<tag>forwarded_for</tag>
+	<p>Replaced by <em>http_header_forwarded</em> directive.
 
 	<tag>mcast_miss_addr</tag>
 	<p>The corresponding code has not built for many years, indicating that the
