Add regression testing for squid.conf https_port certificate loading

--- a/test-suite/Makefile.am
+++ b/test-suite/Makefile.am
@@ -21,6 +21,7 @@ LDADD = \
 EXTRA_PROGRAMS = mem_node_test splay
 
 EXTRA_DIST = \
+	mk-tls-test-certs.sh \
 	$(srcdir)/squidconf/* \
 	test-functionality.sh \
 	test-sources.sh \
@@ -112,9 +113,30 @@ VirtualDeleteOperator_SOURCES = \
 	VirtualDeleteOperator.cc \
 	stub_libmem.cc
 
+CLEANFILES += \
+	ca-mid-root-rsa.pem \
+	ca-mid-rsa.crt \
+	ca-mid-rsa.pem \
+	ca-mid-rsa.pkey \
+	ca-root-rsa.crt \
+	ca-root-rsa.pem \
+	ca-root-rsa.pkey \
+	leaf-root-rsa.pem \
+	leaf-chain-nokey-rsa.pem \
+	leaf-key-rsa.pem \
+	leaf-rsa.crt \
+	leaf-rsa.pkey
+
+if ENABLE_CERT_TESTS
+generate-test-certificates:
+	$(srcdir)/mk-tls-test-certs.sh "$(OPENSSL_BIN)" "$(CERTTOOL_BIN)"
+else
+generate-test-certificates:
+endif
+
 installcheck-local: squid-conf-tests
 
-squid-conf-tests: $(srcdir)/test-squid-conf.sh $(top_builddir)/src/squid.conf.default $(srcdir)/squidconf/*
+squid-conf-tests: generate-test-certificates $(srcdir)/test-squid-conf.sh $(top_builddir)/src/squid.conf.default $(srcdir)/squidconf/*
 	@instructionFiles="$(srcdir)/squidconf/*.conf.instructions"; \
 	for instructionFile in $$instructionFiles; do \
 		cfgBasename=`basename $$instructionFile .instructions`; \
@@ -148,3 +170,5 @@ CLEANFILES += \
 	squid-stderr.log \
 	squid-stderr.log.next \
 	squid-stderr.log.unmatched
+
+.PHONY: generate-test-certificates
