--- a/configure.ac
+++ b/configure.ac
@@ -2583,9 +2583,9 @@ AC_CONFIG_FILES([
 	src/auth/ntlm/SMB_LM/Makefile
 	src/auth/ntlm/SSPI/Makefile
 	src/base/Makefile
-	src/cfg/Makefile
 	src/clients/Makefile
 	src/comm/Makefile
+	src/configuration/Makefile
 	src/debug/Makefile
 	src/dns/Makefile
 	src/DiskIO/Makefile
