--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,7 +16,7 @@ LOADABLE_MODULES_SOURCES = \
 	LoadableModules.cc \
 	LoadableModules.h
 
-SUBDIRS = mem time debug base cfg anyp helper dns html ftp parser comm error eui acl format clients sbuf servers fs repl store DiskIO proxyp
+SUBDIRS = mem time debug base configuration anyp helper dns html ftp parser comm error eui acl format clients sbuf servers fs repl store DiskIO proxyp
 
 if ENABLE_AUTH
 SUBDIRS += auth
@@ -521,7 +521,7 @@ squid_LDADD = \
 	mem/libmem.la \
 	store/libstore.la \
 	time/libtime.la \
-	cfg/libcfg.la \
+	configuration/libconfiguration.la \
 	$(top_builddir)/lib/libmisccontainers.la \
 	$(top_builddir)/lib/libmiscencoding.la \
 	$(top_builddir)/lib/libmiscutil.la \
@@ -1151,7 +1151,7 @@ tests_testRock_LDADD = \
 	mem/libmem.la \
 	store/libstore.la \
 	$(ADAPTATION_LIBS) \
-	cfg/libcfg.la \
+	configuration/libconfiguration.la \
 	sbuf/libsbuf.la \
 	time/libtime.la \
 	$(top_builddir)/lib/libmisccontainers.la \
@@ -1329,7 +1329,7 @@ tests_testUfs_LDADD = \
 	mem/libmem.la \
 	store/libstore.la \
 	$(ADAPTATION_LIBS) \
-	cfg/libcfg.la \
+	configuration/libconfiguration.la \
 	sbuf/libsbuf.la \
 	time/libtime.la \
 	$(top_builddir)/lib/libmisccontainers.la \
@@ -1495,7 +1495,7 @@ tests_testStore_LDADD= \
 	sbuf/libsbuf.la \
 	DiskIO/libdiskio.la \
 	ipc/libipc.la \
-	cfg/libcfg.la \
+	configuration/libconfiguration.la \
 	$(top_builddir)/lib/libmisccontainers.la \
 	$(top_builddir)/lib/libmiscencoding.la \
 	$(top_builddir)/lib/libmiscutil.la \
@@ -1672,7 +1672,7 @@ tests_testDiskIO_LDADD = \
 	dns/libdns.la \
 	base/libbase.la \
 	mem/libmem.la \
-	cfg/libcfg.la \
+	configuration/libconfiguration.la \
 	sbuf/libsbuf.la \
 	$(top_builddir)/lib/libmisccontainers.la \
 	$(top_builddir)/lib/libmiscencoding.la \
@@ -1725,7 +1725,7 @@ tests_testACLMaxUserIP_LDADD = \
 	acl/libacls.la \
 	SquidConfig.o \
 	ip/libip.la \
-	cfg/libcfg.la \
+	configuration/libconfiguration.la \
 	parser/libparser.la \
 	sbuf/libsbuf.la \
 	base/libbase.la \
@@ -1979,7 +1979,7 @@ tests_test_http_range_LDADD = \
 	sbuf/libsbuf.la \
 	debug/libdebug.la \
 	store/libstore.la \
-	cfg/libcfg.la \
+	configuration/libconfiguration.la \
 	$(SNMP_LIBS) \
 	$(top_builddir)/lib/libmisccontainers.la \
 	$(top_builddir)/lib/libmiscencoding.la \
@@ -2138,7 +2138,7 @@ tests_testHttpReply_LDADD=\
 	ip/libip.la \
 	base/libbase.la \
 	ipc/libipc.la \
-	cfg/libcfg.la \
+	configuration/libconfiguration.la \
 	sbuf/libsbuf.la \
 	$(top_builddir)/lib/libmisccontainers.la \
 	$(top_builddir)/lib/libmiscencoding.la \
@@ -2371,7 +2371,7 @@ tests_testHttpRequest_LDADD = \
 	$(REPL_OBJS) \
 	$(ADAPTATION_LIBS) \
 	$(ESI_LIBS) \
-	cfg/libcfg.la \
+	configuration/libconfiguration.la \
 	$(top_builddir)/lib/libmisccontainers.la \
 	$(top_builddir)/lib/libmiscencoding.la \
 	$(top_builddir)/lib/libmiscutil.la \
@@ -2668,7 +2668,7 @@ tests_testCacheManager_LDADD = \
 	$(SNMP_LIBS) \
 	mem/libmem.la \
 	store/libstore.la \
-	cfg/libcfg.la \
+	configuration/libconfiguration.la \
 	parser/libparser.la \
 	sbuf/libsbuf.la \
 	time/libtime.la \
@@ -2746,7 +2746,7 @@ nodist_tests_testConfigParser_SOURCES = \
 	tests/stub_libmem.cc \
 	tests/stub_neighbors.cc
 tests_testConfigParser_LDADD = \
-	cfg/libcfg.la \
+	configuration/libconfiguration.la \
 	parser/libparser.la \
 	base/libbase.la \
 	$(LIBCPPUNIT_LIBS) \
