Fixed unit tests

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -817,6 +817,7 @@ tests_testClpMap_SOURCES = \
 nodist_tests_testClpMap_SOURCES = \
 	tests/stub_HelperChildConfig.cc \
 	tests/stub_SBuf.cc \
+	tests/stub_SquidConfig.cc \
 	tests/stub_libip.cc \
 	tests/stub_libtime.cc
 tests_testClpMap_LDADD = \
@@ -894,7 +895,8 @@ nodist_tests_testURL_SOURCES = \
 	tests/stub_cbdata.cc \
 	tests/stub_debug.cc \
 	tests/stub_libhttp.cc \
-	tests/stub_libmem.cc
+	tests/stub_libmem.cc \
+	tests/stub_SquidConfig.cc
 tests_testURL_LDADD = \
 	libsquid.la \
 	anyp/libanyp.la \
@@ -1111,6 +1113,7 @@ tests_testRock_SOURCES = \
 	store_rebuild.h \
 	tests/stub_store_stats.cc \
 	store_swapout.cc \
+	tests/stub_SquidConfig.cc \
 	tests/stub_tools.cc \
 	tools.h \
 	wordlist.cc \
@@ -1282,6 +1285,7 @@ tests_testUfs_SOURCES = \
 	store_key_md5.h \
 	tests/stub_store_rebuild.cc \
 	store_rebuild.h \
+	tests/stub_SquidConfig.cc \
 	tests/stub_store_stats.cc \
 	store_swapout.cc \
 	tests/stub_tools.cc \
@@ -1447,6 +1451,7 @@ tests_testStore_SOURCES = \
 	store_io.cc \
 	store_key_md5.cc \
 	store_key_md5.h \
+	tests/stub_SquidConfig.cc \
 	tests/stub_store_rebuild.cc \
 	store_rebuild.h \
 	tests/stub_store_stats.cc \
@@ -1701,7 +1706,8 @@ nodist_tests_testACLMaxUserIP_SOURCES = \
 	tests/stub_libhttp.cc \
 	tests/stub_libmem.cc \
 	tests/stub_libsecurity.cc \
-	tests/stub_neighbors.cc
+	tests/stub_neighbors.cc \
+	tests/stub_SquidConfig.cc
 tests_testACLMaxUserIP_LDADD = \
 	$(AUTH_ACL_LIBS) \
 	acl/libapi.la \
@@ -1979,6 +1985,7 @@ tests_testHttp1Parser_SOURCES = \
 	tests/stub_libsecurity.cc \
 	mime_header.cc \
 	mime_header.h \
+	tests/stub_SquidConfig.cc \
 	tests/stub_stmem.cc \
 	tests/stub_store.cc \
 	tests/stub_store_stats.cc \
@@ -2076,6 +2083,7 @@ tests_testHttpReply_SOURCES = \
 	mime_header.h \
 	tests/stub_neighbors.cc \
 	repl_modules.h \
+	tests/stub_SquidConfig.cc \
 	tests/stub_store.cc \
 	tests/stub_store_stats.cc \
 	tests/stub_tools.cc \
