--- a/src/acl/external/kerberos_sid_group/ext_kerberos_sid_group_acl.pl.in
+++ b/src/acl/external/kerberos_sid_group/ext_kerberos_sid_group_acl.pl.in
@@ -99,7 +99,7 @@ Questions on the usage of this program can be sent to the I<Squid Users mailing 
 Bug reports need to be made in English.
 See http://wiki.squid-cache.org/SquidFaq/BugReporting for details of what you need to include with your bug report.
 
-Report bugs or bug fixes using http://bugs.squid-cache.org/
+Report bugs or bug fixes using https://bugs.squid-cache.org/
 
 Report serious security bugs to I<Squid Bugs <squid-bugs@lists.squid-cache.org>>
 
