--- a/src/http/url_rewriters/LFS/url_lfs_rewrite.pl.in
+++ b/src/http/url_rewriters/LFS/url_lfs_rewrite.pl.in
@@ -105,7 +105,7 @@ First Version: 26. May 1997
 Bug reports need to be made in English.
 See https://wiki.squid-cache.org/SquidFaq/BugReporting for details of what you need to include with your bug report.
 
-Report bugs or bug fixes using http://bugs.squid-cache.org/
+Report bugs or bug fixes using https://bugs.squid-cache.org/
 
 Report serious security bugs to I<Squid Bugs <squid-bugs@lists.squid-cache.org>>
 
