--- a/src/security/cert_generators/file/security_file_certgen.8.in
+++ b/src/security/cert_generators/file/security_file_certgen.8.in
@@ -172,7 +172,7 @@ Questions on the usage of this program can be sent to the
 Bug reports need to be made in English.
 See https://wiki.squid-cache.org/SquidFaq/BugReporting for details of what you need to include with your bug report.
 .PP
-Report bugs or bug fixes using http://bugs.squid-cache.org/
+Report bugs or bug fixes using https://bugs.squid-cache.org/
 .PP
 Report serious security bugs to
 .I Squid Bugs <squid-bugs@lists.squid-cache.org>
