Fixed unit tests

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1697,6 +1697,7 @@ nodist_tests_testACLMaxUserIP_SOURCES = \
 	tests/stub_errorpage.cc \
 	tests/stub_fatal.cc \
 	globals.cc \
+	tests/stub_cache_manager.cc \
 	tests/stub_libauth.cc \
 	tests/stub_libcomm.cc \
 	tests/stub_libhttp.cc \
