--- a/src/repl/Makefile.am
+++ b/src/repl/Makefile.am
@@ -28,7 +28,7 @@ TESTS += testHeaders
 ## Special Universal .h dependency test script
 ## aborts if error encountered
 testHeaders: $(srcdir)/heap/*.h
-	$(SHELL) $(top_srcdir)/test-suite/testheaders.sh "$(CXXCOMPILE)" $^ || exit 1
+	$(MAKE) $(^:.h=.hdrtest)
 ## ./ has no .h files.
 ## ./lru/ has no .h files.
 
