--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -137,6 +137,7 @@ jobs:
           sudo sed --in-place -E 's/# (deb-src.*updates main)/  \1/g' /etc/apt/sources.list
           sudo apt-get --quiet=2 update
           sudo apt-get --quiet=2 build-dep squid
+          sudo apt-get --quiet=2 install linuxdoc-tools
 
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -147,7 +148,7 @@ jobs:
       - name: Build Squid
         run: |
           ./bootstrap.sh
-          ./test-suite/buildtest.sh check ./test-suite/buildtests/layer-02-maximus.opts
+          ./test-builds.sh ./test-suite/buildtests/layer-02-maximus.opts
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
