--- a/src/Common.am
+++ b/src/Common.am
@@ -74,6 +74,9 @@ COMPAT_LIB = $(top_builddir)/compat/libcompatsquid.la $(LIBPROFILER)
 ## Some helpers are written in Perl and need the local shell defined properly
 subst_perlshell = sed -e 's,[@]PERL[@],$(PERL),g' <$(srcdir)/$@.pl.in >$@ || ($(RM) -f $@ ; exit 1)
 
-# EXTENSIONS=.hdrtest
-# .h.hdrtest:
-# 	$(SHELL) $(top_srcdir)/test-suite/testheaders.sh "$(CXXCOMPILE)" $^ || exit 1
+EXTENSIONS=.hdrtest
+.h.hdrtest:
+	sed 's%[@]HEADER[@]%${<}%' $(top_srcdir)/test-suite/testHeader.cc.in | \
+		$(CXXCOMPILE) -x c++ -c -o "$@" - ; \
+		if test $$? -eq 0 ; then  echo "ok - $<"; else echo "not ok - $<"; exit 1; fi; \
+		$(RM) $@
