--- a/src/Common.am
+++ b/src/Common.am
@@ -76,8 +76,8 @@ subst_perlshell = sed -e 's,[@]PERL[@],$(PERL),g' <$(srcdir)/$@.pl.in >$@ || ($(
 
 EXTENSIONS=.hdrtest
 .h.hdrtest:
-	@echo "testing header $<"
-	@sed 's%[@]HEADER[@]%${<}%' $(top_srcdir)/test-suite/testHeader.cc.in >$@.cc ;\
-		$(CXXCOMPILE) -c -o "$@" $@.cc ; \
+	srcfile=`basename $<`; \
+		sed 's%[@]HEADER[@]%${<}%' "$(top_srcdir)/test-suite/testHeader.cc.in" >"$$srcfile.cc" ;\
+		$(CXXCOMPILE) -c -o "$$srcfile" "$$srcfile.cc" ; \
 		if test $$? -eq 0 ; then  echo "ok - $<"; else echo "not ok - $<"; exit 1; fi; \
-		$(RM) $@.cc $@
+		$(RM) "$$srcfile.cc" "$$srcfile"
