--- a/src/Common.am
+++ b/src/Common.am
@@ -77,7 +77,7 @@ subst_perlshell = sed -e 's,[@]PERL[@],$(PERL),g' <$(srcdir)/$@.pl.in >$@ || ($(
 EXTENSIONS=.hdrtest
 .h.hdrtest:
 	srcfile=`basename $<`; \
-		sed 's%[@]HEADER[@]%${<}%' "$(top_srcdir)/test-suite/testHeader.cc.in" >"$$srcfile.cc" ;\
+		sed 's%[@]HEADER[@]%${<}%' "$(top_srcdir)/test-suite/testHeader.cc.in" >"$$srcfile.cc" && \
 		$(CXXCOMPILE) -c -o "$$srcfile" "$$srcfile.cc" ; \
 		if test $$? -eq 0 ; then  echo "ok - $<"; else echo "not ok - $<"; exit 1; fi; \
 		$(RM) "$$srcfile.cc" "$$srcfile"
