--- a/src/TestHeaders.am
+++ b/src/TestHeaders.am
@@ -5,10 +5,6 @@
 ## Please see the COPYING and CONTRIBUTORS files for details.
 ##
 
-## Test ./*.h files in a directory using test-suite/testheaders.sh
-
-## TODO: include in src/Common.am when all testHeaders users are the same.
-
 TESTS += testHeaders
 
 ## .h dependency test script
@@ -16,7 +12,5 @@ TESTS += testHeaders
 testHeaders: $(srcdir)/*.h
 	$(MAKE) $(^:.h=.hdrtest) && cp $(TRUE) $@
 
-## XXX: this is only needed because testheaders.sh creates a dummy file called
-## testHeaders and distclean does not know about it.
-## Remove when testheaders.sh and its users are fixed.
+## needed to remove artifacts used to signal header compile success
 CLEANFILES += testHeaders
