fix out-of-dir build

--- a/compat/Makefile.am
+++ b/compat/Makefile.am
@@ -90,8 +90,8 @@ testPreCompiler_LDFLAGS=
 #
 TESTS += testHeaders
 
-testHeaders_SOURCES = $(top_srcdir)/test-suite/testHeader.cc.in
-testHeaders: $(srcdir)/*.h $(srcdir)/os/*.h
+testHeaders: $(srcdir)/*.h $(srcdir)/os/*.h $(top_srcdir)/test-suite/testHeader.cc.in
+	echo testHeaders rule: PWD=$PWD
 	$(MAKE) $(^:.h=.hdrtest) && cp $(TRUE) $@
 
 CLEANFILES += testHeaders
