--- a/test-suite/testHeader.cc.in
+++ b/test-suite/testHeader.cc.in
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2023- The Squid Software Foundation and contributors
+ * Copyright (C) 1996-2023 The Squid Software Foundation and contributors
  *
  * Squid software is distributed under GPLv2+ license and includes
  * contributions from numerous individuals and organizations.
@@ -17,4 +17,3 @@
 int main(int, char **) {
     return 0;
 }
-
