use SOURCES in src/acl instead of glob patterns

--- a/src/Common.am
+++ b/src/Common.am
@@ -79,5 +79,8 @@ EXTENSIONS=.hdrtest
 	srcfile=`basename $@`; \
 		sed 's%[@]HEADER[@]%${<}%' "$(top_srcdir)/test-suite/testHeader.cc.in" >"$$srcfile.cc" && \
 		$(CXXCOMPILE) -DIN_TESTHEADERS=1 -c -o "$$srcfile" "$$srcfile.cc" ; \
-		if test $$? -eq 0 ; then  echo "ok - $<"; else echo "not ok - $<"; exit 1; fi; \
+		if test $$? -eq 0 ; then  echo "ok - $$srcfile"; else echo "not ok - $$srcfile"; exit 1; fi; \
 		$(RM) "$$srcfile.cc" "$$srcfile"
+
+# nothing to do, skip
+.cc.hdrtest:
