using SOURCES in src/adaptation

--- a/src/adaptation/Makefile.am
+++ b/src/adaptation/Makefile.am
@@ -6,7 +6,6 @@
 ##
 
 include $(top_srcdir)/src/Common.am
-include $(top_srcdir)/src/TestHeaders.am
 
 SUBDIRS =
 
@@ -57,3 +56,11 @@ SUBDIRS += icap
 libadaptation_la_LIBADD += icap/libicap.la
 endif
 
+
+TESTS += testHeaders
+
+testHeaders: $(SOURCES)
+	$(MAKE) $(^:.h=.hdrtest) && cp $(TRUE) $@
+
+## needed to remove artifacts used to signal header compile success
+CLEANFILES += testHeaders
