TestHeaders depends on the template file

--- a/src/TestHeaders.am
+++ b/src/TestHeaders.am
@@ -7,7 +7,7 @@
 
 TESTS += testHeaders
 
-testHeaders: $(SOURCES)
+testHeaders: $(SOURCES) $(top_srcdir)/test-suite/testHeader.cc.in
 	$(MAKE) $(^:.h=.hdrtest) && cp $(TRUE) $@
 
 ## needed to remove artifacts used to signal header compile success
