use TestHeaders.am in src/acl

--- a/src/acl/Makefile.am
+++ b/src/acl/Makefile.am
@@ -6,6 +6,7 @@
 ##
 
 include $(top_srcdir)/src/Common.am
+include $(top_srcdir)/src/TestHeaders.am
 
 SUBDIRS= external
 
@@ -197,11 +198,3 @@ libacls_la_SOURCES += $(ARP_ACLS)
 endif
 EXTRA_libacls_la_SOURCES += $(ARP_ACLS)
 
-
-TESTS += testHeaders
-
-testHeaders: $(SOURCES)
-	$(MAKE) $(^:.h=.hdrtest) && cp $(TRUE) $@
-
-## needed to remove artifacts used to signal header compile success
-CLEANFILES += testHeaders
