--- a/src/Common.am
+++ b/src/Common.am
@@ -78,10 +78,11 @@ EXTENSIONS=.hdrtest
 .h.hdrtest:
 	filepath=`echo $< | sed 's/^[/\.]*//' `; \
 	srcfile=`basename $@`; \
-		sed 's%[@]HEADER[@]%${<}%' "$(top_srcdir)/test-suite/testHeader.cc.in" >"$$srcfile.cc" && \
-		$(CXXCOMPILE) -DIN_TESTHEADERS=1 -c -o "$$srcfile" "$$srcfile.cc" ; \
-		if test $$? -eq 0 ; then  echo "ok - $$filepath"; else echo "not ok - $$filepath"; exit 1; fi; \
-		$(RM) "$$srcfile.cc" "$$srcfile"
+	sed 's%[@]HEADER[@]%${<}%' "$(top_srcdir)/test-suite/testHeader.cc.in" >"$$srcfile.cc" && \
+	if $(CXXCOMPILE) -DIN_TESTHEADERS=1 -c -o "$$srcfile" "$$srcfile.cc" ; \
+	then echo "ok - $$filepath"; else echo "not ok - $$filepath"; exit 1; fi; \
+	$(RM) "$$srcfile.cc" "$$srcfile"
 
 # nothing to do, skip
 .cc.hdrtest:
+qless
